# ICMSReader

./: CMakeLists.txt  LICENSE  README.md
Plugin/: CMakeLists.txt  paraview.plugin
Plugin/Reader/: CMakeLists.txt  vtk.module
